# roblox-chatbot

./: app.py  gemini_service.py  pyproject.toml  rate_limiter.py  render_requirements.txt  replit.md
roblox_examples/: chat_gui.lua  http_service.lua
static/js/: api_test.js
templates/: api_docs.html  index.html
