[tool.poetry]
name = "roblox-chatbot"
version = "0.1.0"
description = "Roblox Chatbot Backend with Gemini AI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"
google-genai = "^0.3.0"
gunicorn = "^21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
